--- a/KoalaShopPOS/KoalaShopPOS.csproj
+++ b/KoalaShopPOS/KoalaShopPOS.csproj
@@ -100,6 +100,36 @@
     <Compile Include="FormLogin.Designer.cs">
       <DependentUpon>FormLogin.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormProduct.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormProduct.Designer.cs">
+      <DependentUpon>FormProduct.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormProductAdd.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormProductAdd.Designer.cs">
+      <DependentUpon>FormProductAdd.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormProductInfo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormProductInfo.Designer.cs">
+      <DependentUpon>FormProductInfo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormProductMore.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormProductMore.Designer.cs">
+      <DependentUpon>FormProductMore.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormProductStocks.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormProductStocks.Designer.cs">
+      <DependentUpon>FormProductStocks.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormSupplier.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -153,6 +183,21 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormLogin.resx">
       <DependentUpon>FormLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormProduct.resx">
+      <DependentUpon>FormProduct.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormProductAdd.resx">
+      <DependentUpon>FormProductAdd.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormProductInfo.resx">
+      <DependentUpon>FormProductInfo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormProductMore.resx">
+      <DependentUpon>FormProductMore.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormProductStocks.resx">
+      <DependentUpon>FormProductStocks.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormSupplier.resx">
       <DependentUpon>FormSupplier.cs</DependentUpon>
@@ -234,6 +279,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\CustomerEdit.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\535577.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\productEdit.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Actions-application-exit-icon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\AutoMapper.3.2.1\tools\AutoMapper.targets" Condition="Exists('..\packages\AutoMapper.3.2.1\tools\AutoMapper.targets')" />
