--- a/KoalaShopPOS/KoalaShopPOS.csproj
+++ b/KoalaShopPOS/KoalaShopPOS.csproj
@@ -118,6 +118,12 @@
     <Compile Include="FormProductAdd.Designer.cs">
       <DependentUpon>FormProductAdd.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormProductChoice.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormProductChoice.Designer.cs">
+      <DependentUpon>FormProductChoice.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormProductInfo.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -192,6 +198,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormProductAdd.resx">
       <DependentUpon>FormProductAdd.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormProductChoice.resx">
+      <DependentUpon>FormProductChoice.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormProductInfo.resx">
       <DependentUpon>FormProductInfo.cs</DependentUpon>
