--- a/KoalaShopLib/KoalaShopLib.csproj
+++ b/KoalaShopLib/KoalaShopLib.csproj
@@ -60,8 +60,7 @@
     <Compile Include="Contracts\IControllerFactory.cs" />
     <Compile Include="Contracts\IKoalaShop.cs" />
     <Compile Include="Factories\ControllerFactory.cs" />
-    <Compile Include="Controllers\CategoryController.cs" />
-    <Compile Include="Controllers\ProductController.cs" />
+    <Compile Include="EFRepositories\ProductRepo.cs" />
     <Compile Include="EFRepositories\AbstractRepository.cs" />
     <Compile Include="EFRepositories\DataAppContext.cs" />
     <Compile Include="EFRepositories\GenericRepo.cs" />
@@ -89,7 +88,9 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\AutoMapper.3.2.1\tools\AutoMapper.targets" Condition="Exists('..\packages\AutoMapper.3.2.1\tools\AutoMapper.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
