created new view, please add other forms on the newly added view since KoalaPOS is in mess,
QA Tita Neil,thanks

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -3,6 +3,7 @@
   <repository path="..\DataAccessObjects.Test\packages.config" />
   <repository path="..\DataAccessObjects\packages.config" />
   <repository path="..\Demo\packages.config" />
+  <repository path="..\KoalaShop\packages.config" />
   <repository path="..\KoalaShopPOS\packages.config" />
   <repository path="..\POS System\packages.config" />
   <repository path="..\WindowsFormsApplication1\packages.config" />
