--- a/KoalaShop/App.config
+++ b/KoalaShop/App.config
@@ -15,6 +15,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DataAppContext" connectionString="data source=(LocalDb)\v11.0;initial catalog=EFTestDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DataAppContext" connectionString="data source=(LocalDb)\v11.0;initial catalog=KoalaShopDBTest;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
