--- a/KoalaShop/KoalaShop.csproj
+++ b/KoalaShop/KoalaShop.csproj
@@ -100,6 +100,10 @@
     <Compile Include="FormPOS.Designer.cs">
       <DependentUpon>FormPOS.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormProductStocks.cs" />
+    <Compile Include="FormProductStocks.Designer.cs">
+      <DependentUpon>FormProductStocks.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -147,6 +151,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormPOS.resx">
       <DependentUpon>FormPOS.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormProductStocks.resx">
+      <DependentUpon>FormProductStocks.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
