adding codes to some forms:
Formproduct, FormCustomer, FormEmployee, FormExpenses, FormSupplier.

Di ko kabalu:
 *pagtawag sa EmployeeID..
 *pagkuha sa ID sa mga dropdowns.

Lovelots,
- Alingling

--- a/KoalaShop/KoalaShop.csproj
+++ b/KoalaShop/KoalaShop.csproj
@@ -132,6 +132,12 @@
     <Compile Include="FormPOS.designer.cs">
       <DependentUpon>FormPOS.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormProduct.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormProduct.Designer.cs">
+      <DependentUpon>FormProduct.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormSupplier.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -196,6 +202,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormPOS.resx">
       <DependentUpon>FormPOS.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormProduct.resx">
+      <DependentUpon>FormProduct.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormSupplier.resx">
       <DependentUpon>FormSupplier.cs</DependentUpon>
