--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -4,6 +4,8 @@
   <repository path="..\DataAccessObjects\packages.config" />
   <repository path="..\Demo\packages.config" />
   <repository path="..\KoalaShop\packages.config" />
+  <repository path="..\KoalaShopLib.Test\packages.config" />
+  <repository path="..\KoalaShopLib\packages.config" />
   <repository path="..\KoalaShopPOS\packages.config" />
   <repository path="..\POS System\packages.config" />
   <repository path="..\WindowsFormsApplication1\packages.config" />
