Code and Code and Code and Code and Code :)

--- a/KoalaShop/App.config
+++ b/KoalaShop/App.config
@@ -15,6 +15,9 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DataAppContext" connectionString="data source=(LocalDb)\v11.0;initial catalog=KoalaShopDBTest;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DataAppContext" connectionString="data source=(LocalDb)\v11.0;initial catalog=KoalaShopDBTest;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
+      providerName="System.Data.SqlClient" />
+    <add name="KoalaShop.Properties.Settings.ConnectionString" connectionString="Provider=SQLNCLI11;Data Source=(LocalDb)\v11.0;Integrated Security=SSPI;Initial Catalog=KoalaShopDBTest"
+      providerName="System.Data.OleDb" />
   </connectionStrings>
 </configuration>
